# essential_graphrag

./: main.py  pyproject.toml
chapter_02/: rag_from_scratch.ipynb  text_chunking.py
