[project]
name = "grag-essential"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter-server>=2.17.0",
    "jupyterlab>=4.5.1",
    "neo4j>=6.0.3",
    "openai>=2.14.0",
    "pdfplumber>=0.11.8",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
]
